--- a/vignettes/intro-to-gmvarkit.Rmd
+++ b/vignettes/intro-to-gmvarkit.Rmd
@@ -18,15 +18,17 @@ knitr::opts_chunk$set(
 ```
 
 ## Introduction
-The package `gmvarkit` contains tools to estimate and analyze both reduced form and structural Gaussian mixture vector autoregressive (GMVAR) model (Kalliovirta, Meitz, and Saikkonen, 2016, and Virolainen, 2020). In this vignette, we first define the reduced form GMVAR model, briefly discuss some of its properties, and explain how to use the functions in `gmvarkit` to estimate the model, examine the estimates, check its adequacy with quantile residual diagnostics, simulate from the process, and forecast future observations of the process. Then, we define the structural GMVAR model, discuss its identification, and explain how to use the functions in `gmvarkit` to estimate generalized impulse response function and to test hypotheses regarding the paremeters. Most of the functions work with both, reduced form and structural models, but particularly the one for estimating generalized impulse response function accomodates structural models. 
+The package `gmvarkit` contains tools to estimate and analyze both reduced form and structural Gaussian mixture vector autoregressive (GMVAR) models (Kalliovirta, Meitz, and Saikkonen, 2016, and Virolainen, 2020). In this vignette, we first define the reduced form GMVAR model, briefly discuss some of its properties, and explain how to use the functions in `gmvarkit` to estimate the model, examine the estimates, check its adequacy with quantile residual diagnostics, simulate from the process, and forecast future observations of the process. Then, we define the structural GMVAR model, discuss its identification, and explain how to use the functions in `gmvarkit` to estimate generalized impulse response function and to test hypotheses regarding the paremeters. Most of the functions work with both, reduced form and structural models, but particularly the one for estimating generalized impulse response function accomodates structural models only. 
 
-For more comprehensive discussion on the reduced form model, see the cited article by Kalliovirta, Meitz, and Saikkonen (2016), and for the structural model, see the cited article by Virolainen (2020). For a shorter introduction and demonstration on how to use `gmvarkit`, see the readme file.
+For more comprehensive discussion on the reduced form model, see the cited article by Kalliovirta, Meitz, and Saikkonen (2016), and for the structural model, see the cited unpublished manuscript by Virolainen (2020). For a shorter introduction and demonstration on how to use `gmvarkit`, see the readme file.
 
 ### Some general notes on gmvarkit
-The GMVAR models in `gmvarkit` are defined as class `gmvar` S3 objects which can be created with the estimation function `fitGMVAR` or with the constructor function `GMVAR`. The created `gmvar` objects are then be conveniently used as main arguments in many other functions that allow, for example, model diagnostics, simulations, and forecasting - similarly to many of the popular R packages. Therefore, after estimating a GMVAR model, it's easy to use the other functions for further analysis. Some tasks, however, such as creating GMVAR models without estimation, or setting up initial population for the genetic algorithm employed by the estimation function, require accurate understanding on how the parameter vectors are constructed in this package. 
+The GMVAR models in `gmvarkit` are defined as class `gmvar` S3 objects which can be created with the estimation function `fitGMVAR` or with the constructor function `GMVAR`. The created class `gmvar` objects can then be conveniently used as main arguments in many other functions that allow, for example, model diagnostics, simulations, and forecasting - similarly to many of the popular R packages. Therefore, after estimating a GMVAR model, it's easy to use the other functions for further analysis. Some tasks, however, such as creating GMVAR models without estimation, or setting up an initial population for the genetic algorithm employed by the estimation function, require accurate knowledge on how the parameter vectors are constructed in this package. 
 
-The notations for (unconstrained) parameter vector are in line with the cited article by Kalliovirta et. al. (2016), but for clarity we repeat these notations in the second section of this vignette. In the third section, we show how to apply general linear constraints to the autoregressive parameters of a GMVAR model. Two examples are given to demonstrate how to use the general formula. In the fourth section we have listed some useful functions and methods found in `gmvarkit` and briefly explain how they work and how to use them. 
-HUOM TAMA PITAA PAIVITTAA
+### Structure of this vignette
+The rest of this vignette is structured as follows. We have two main sections: one for the reduced form model and one for the structural model. First comes the reduced form model and we start by giving its definition and briefly discussing some of its properties. The form of the reduced form model parameter vector used in `gmvarkit` is then described. The notation for unconstrained parameter vector is in line with the cited article by Kalliovirta et. al. (2016), however. After that, it is explained and demonstrated by examples how to impose linear constraints on the autoregressive parameters of the model. Finally, we have listed some of the useful functions in `gmvarkit` and explained how one use them to estimate the model, examine the estimates, evaluate model adequacy, construct a GMVAR model from pre-specified parameters, simulate from a GMVAR process, and forecast a GMVAR process. 
+
+The section for the structural GMVAR model starts by defining the model and then proceeds to describe how the structural shocks can be identified - often with less restrictive constraints than in conventional SVAR models, while some of the constraints are also testable. Then, it is discussed how the SGMVAR model can be estimated in `gmvarkit` and how to impose overidentifying restrictions on the "B-matrix". It is also explained how one may build a structural model based on a reduced form model when there are exactly two regimes in the model. Finally, impulse response analysis based on a generalized impulse response function is covered. 
 
 # Reduced form GMVAR model
 
@@ -86,12 +88,13 @@ Denoting $\boldsymbol{y}_{t-1}=(y_{t-1},...,y_{t-p})$ $(dp\times 1)$, the mixing
 $$
 \alpha_{m,t} = \frac{\alpha_mn_{dp}(\boldsymbol{y}_{t-1};\mu_m,\boldsymbol{\Sigma}_{m,p})}{\sum_{n=1}^M\alpha_nn_{dp}(\boldsymbol{y}_{t-1};\mu_n,\boldsymbol{\Sigma}_{n,p})},
 $$
-where the mixing weights parameters $\alpha_m$ are assumed to satisfy $\sum_{m=1}^M\alpha_{m}=1$ and the $dp$-dimensional normal densities are as in (\ref{dpdensities}). The probabilities for each regime occuring therefore depend on the level, variability, and temporal depedence of the past $p$ observations. This is a convenient feature for forecasting but it also enables the researcher to associate certain characteristics to different regimes. 
+where the mixing weights parameters $\alpha_m$ are assumed to satisfy $\sum_{m=1}^M\alpha_{m}=1$ and the $dp$-dimensional normal densities are as the ones defined for $\boldsymbol{z}_{t,m}$ above but evaluated at $\boldsymbol{y}_{t-1}$. The probabilities for each regime occuring therefore depend on the level, variability, and temporal depedence of the past $p$ observations. This is a convenient feature for forecasting but it also enables the researcher to associate certain characteristics to different regimes. 
 
 ## Some theoretical properties of GMVAR model
 
 ### Stationary distribution
-\textbf{Theorem 1} Consider the GMVAR process $y_t$ that satisfies the model assumptions. Then $\boldsymbol{y}_t=(y_t,...,y_{t-p+1})$ is a Markov Chain on $\mathbb{R}^{dp}$ with stationary distribution characterized by the density
+#### Theorem 1
+Consider the GMVAR process $y_t$ that satisfies the model assumptions. Then $\boldsymbol{y}_t=(y_t,...,y_{t-p+1})$ is a Markov Chain on $\mathbb{R}^{dp}$ with stationary distribution characterized by the density
 $$
 f(\boldsymbol{y};\boldsymbol{\theta})=\sum_{m=1}^M\alpha_m n_{dp}(\boldsymbol{y};\upsilon_m).
 $$
@@ -100,9 +103,9 @@ Moreover, $\boldsymbol{y}_t$ is ergodic.
 Theorem 1 shows that the stationary distribution of $\boldsymbol{y}_t$ is a mixture of $M$ multinormal distributions with constant mixing weights $\alpha_m$. Consequently, all moments of the stationary distribution exist and are finite. 
 
 ### Interpretation of the mixing weights $\alpha_m$ and $\alpha_{m,t}$
-Based on Theorem 1 $\alpha_m$ has the interpretation as the unconditional probability of the random vector $\boldsymbol{y}_t$ being generated from the $m$th mixture component. Consequently, $\alpha_m$ also represents the unconditional probability of the observation $y_t$ being generated from the $m$th mixture component (see Kalliovirta et al. 2016, Section 3.3 for more details).
+Based on the above Theorem 1, $\alpha_m$ has the interpretation as the unconditional probability of the random vector $\boldsymbol{y}_t$ being generated from the $m$th mixture component. Consequently, $\alpha_m$ also represents the unconditional probability of the observation $y_t$ being generated from the $m$th mixture component (see Kalliovirta et al. 2016, Section 3.3 for more details).
 
-As noted, the mixing weights $\alpha_{m,t}$ are the conditional probabilities for the random vector $y_t$ being generated from the $m$th mixture component. According the definition of the mixing weights, regimes with higher likelihood of the past $p$ observations are more likely to generate the new observations but the likelihoods are also scaled with the mixing weight parameters $\alpha_m$. 
+As noted, the mixing weights $\alpha_{m,t}$ are the conditional probabilities for the random vector $y_t$ being generated from the $m$th mixture component. According the definition of the mixing weights, regimes with higher weighted likelihood of the past $p$ observations are more likely to generate the new observations, with weights being the mixing weight parameters $\alpha_m$. 
 
 ### Properties of the maximum likelihood estimator
 
@@ -142,7 +145,7 @@ $$\boldsymbol{\theta} = (\phi_{1,0},...,\phi_{M,0},\boldsymbol{\psi},\alpha_1,..
 where $\boldsymbol{\psi}$ is the $(qx1)$ parameter vector containing constrained autoregressive parameters. As in the case of regular models, instead of the intercept parametrization that takes use of intercept terms $\phi_{m,0}$, one may use the mean parametrization with regimewise means $\mu_m$ instead _(m=1,...,M)_. 
 
 ### Examples of linear constraints
-Consider the following two common uses for linear constraints: restricting the autoregressive parameters to be the same for all regimes and constraining some parameters to zero. Of course also some other constraints may be useful, but we chose to show illustrative examples of these two as they occur in the cited article by Kalliovirta et al. (2016). 
+Consider the following two common uses of linear constraints: restricting the autoregressive parameters to be the same for all regimes and constraining some parameters to zero. Of course also some other constraints may be useful, but we chose to show illustrative examples of these two as they occur in the cited article by Kalliovirta et al. (2016). 
 
 #### Restricting AR parameters to be the same for all regimes
 To restrict the AR parameters to be the same for all regimes, we want $\boldsymbol{\phi_m}$ to be the same for all _m=1,...,M_. The parameter vector $\boldsymbol{\psi}$ $(qx1)$ then corresponds to any $\boldsymbol{\phi_m}=\boldsymbol{\phi}$, and therefore $q=pd^2$. For the constraint matrix we choose 
@@ -183,6 +186,8 @@ satisfies $\boldsymbol{C}\boldsymbol{\psi}=(\boldsymbol{\phi},...,\boldsymbol{\p
 
 If the model estimates poorly, it is often because the number of mixture components _M_ is chosen too large. One reason for is that the genetic algorithm is (with the default settings) designed to find solutions with non-zero mixing weights for all regimes. One may also adjust the settings of the genetic algorithm or set up an initial population with approximate guesses for the estimates. This can by done by passing arguments in `fitGMVAR` to the function `GAfit` which implements the genetic algorithm. To check the available settings, read the documentation `?GAfit`. If the iteration limit is reached when estimating the model, the function `iterate_more` can be used to finish the estimation. 
 
+__If the estimation algorithm fails to create an initial population for the genetic algorithm__, it usually helps to scale the individual series so that the AR coefficients (of a VAR model) will be relative small, preferably less than one. Even if one is able to create an initial population, it should be preferred to scale the series so that most of the the AR coefficients will not be very large, as the estimation algorithm works better with small AR coefficients. If needed, another package can be used to fit linear VARs to the series to see which scaling of the series results in relatively small AR coefficients.
+
 ### Examining the estimates
 Parameters of the estimated model are printed in an illustrative and easy to read form. In order to easily compare approximate standard errors to certain estimates, one can print the approximate standard errors of the estimates in the same form with the function `print_std_errors`. Numerical approximation of the gradient and Hessian matrix of the log-likelihood at the estimates can be obtained conveniently with the functions `get_gradient` or `get_foc` and `get_hessian`, and eigenvalues of the Hessian can be obtained with the function `get_soc`.
 
@@ -190,10 +195,10 @@ Graphs of the profile log-likelihood functions of the parameters around the esti
 
 The estimated objects have their own print, plot, and summary methods. In-sample conditional moments can be examined with the function `cond_moment_plot`.
 
-The function `alt_gmvar` can be used to build GMVAR model based on an arbitrary estimation round. This can be used to consider estimates pointed by local maximums instead of the ML estimate. 
+The function `alt_gmvar` can be used to build GMVAR model based on an arbitrary estimation round. This can be used to consider estimates pointed by local maximums instead of the ML estimate. In particular, if the MLE turns out to be a near border solution, it might be appropriate to consider an estimate that is well inside the parameter space.
 
 ### Model diagnostics
-`gmvarkit` considers model diagnostics based on multivariate extension of quantile residuals (see Kalliovirta and Saikkonen 2010) which are under the correct model specification asymptotically multivariate standard normal distributed. The quantile residual tests introduced by Kalliovirta and Saikkonen (2010) can be performed with the function `quantile_residual_tests` by providing the estimated model (that is class `gmvar` object) as an argument.
+`gmvarkit` considers model diagnostics based on multivariate extension of quantile residuals (see Kalliovirta and Saikkonen 2010) which are under the correct model specification asymptotically multivariate standard normal distributed. The quantile residual tests introduced by Kalliovirta and Saikkonen (2010) can be performed with the function `quantile_residual_tests` by providing the estimated model (that is class `gmvar` object) as an argument. The argument `nsimu` can be used to employ a simulation procedure that may enhance the tests size properties.
 
 For graphical diagnostics one may use the function `diagostic_plot`, which enables one to plot the quantile residual time series, auto- and cross-correlation functions of quantile residuals or their squares, or quantile residual histograms and normal QQ-plots.  
 
@@ -238,9 +243,9 @@ Following Lanne & Lütkepohl (2010) and Lanne et al. (2010), we decompose the er
 \begin{equation}\label{eq:decomp}
 \Omega_1 = WW' \quad \text{and} \quad \Omega_m=W\Lambda_mW', \quad m=2,...,M,
 \end{equation}
-where the diagonal of $\Lambda_m=\text{diag}(\lambda_{m1},...,\lambda_{md})$, $\lambda_{mi}>0$ ($i=1,...,d$), contains the eigenvalues of the matrix $\Omega_m\Omega_1^{-1}$ and columns of the nonsingular $W$ are the related eigenvectors. When $M=2$, the above decomposition always exists (e.g. Lanne & Lütkepohl, 2010, Proposition 1), but for $M\geq 3$ its existence requires that the matrices $\Omega_m\Omega_1^{-1}$ share the common eigenvectors in $W$. Whether imposing the above structure on the covariance matrices is appropriate with $M\geq 3$, can be evaluated by estimating the restricted and unrestricted SGMVAR models and conducting a likelihood ratio test, comparing values of information criteria, or examining quantile residual diagnostics, for example. These three methods are accomodated in `gmvarkit`: values of the information criteria are calculated for all estimated models and available, for instance, in the summary print, likelihood ratio test is available as the function `LR_test` and quantile residual diagnostics can be eximined with the functions `diagnostic_plot` and `quantile_residual_tests`.
+where the diagonal of $\Lambda_m=\text{diag}(\lambda_{m1},...,\lambda_{md})$, $\lambda_{mi}>0$ ($i=1,...,d$), contains the eigenvalues of the matrix $\Omega_m\Omega_1^{-1}$ and columns of the nonsingular $W$ are the related eigenvectors. When $M=2$, the above decomposition always exists (e.g. Lanne & Lütkepohl, 2010, Proposition 1), but for $M\geq 3$ its existence requires that the matrices $\Omega_m\Omega_1^{-1}$ share the common eigenvectors in $W$. Whether imposing the above structure on the covariance matrices is appropriate with $M\geq 3$, can be evaluated by estimating the restricted and unrestricted SGMVAR models and conducting a likelihood ratio test, comparing values of information criteria, or examining quantile residual diagnostics, for example. These three methods are accomodated in `gmvarkit`: values of the information criteria are calculated for all estimated models are available, for instance, in the summary print, likelihood ratio test is available as the function `LR_test` and quantile residual diagnostics can be examined with the functions `diagnostic_plot` and `quantile_residual_tests`.
 
-Lanne & Lütkepohl (2010) show that for a given ordering of the eigenvalues, W is unique apart from changing all signs in a column, as long as for all $i\neq j\in \lbrace 1,...,d \rbrace$ there exists an $m\in \lbrace 2,...,M \rbrace$ such that $\lambda_{mi} \neq \lambda_{mj}$. A locally unique B-matrix that amplifies a constant sized structural shock according to the conditional variance of the reduced form error is therefore obtained as
+Lanne & Lütkepohl (2010) show that for a given ordering of the eigenvalues $\lambda_{mi}$, $W$ is unique apart from changing all signs in a column, as long as for all $i\neq j\in \lbrace 1,...,d \rbrace$ there exists an $m\in \lbrace 2,...,M \rbrace$ such that $\lambda_{mi} \neq \lambda_{mj}$. A locally unique B-matrix that amplifies a constant sized structural shock according to the conditional variance of the reduced form error is therefore obtained as
 \begin{equation}\label{eq:bt}
 B_t=W(\alpha_{1,t}I_d + \sum_{m=2}^M\alpha_{m,t}\Lambda_m)^{1/2}
 \end{equation}
@@ -250,11 +255,11 @@ which simultaneously diagonalizes $\Omega_1,...,\Omega_M$, and $\Omega_{u,t}$ fo
 Even if all pairs of $\lambda_{mi}$ are distinct for some $m$, unique identification of $B_t$ requires deciding upon the ordering of $\lambda_{mi}$ in the diagonals of $\Lambda_m$ which fixes also the ordering of the columns of $W$. With an arbitrary ordering of the eigenvalues and eigenvectors, it is not guaranteed that the structural shocks have economic interpretations. However, after the statistical identification, overidentifying restrictions that lead economically interpretable structural shocks can be tested and thus validated statistically. Furthermore, it turns out that globally unique identification of the structural shocks can often be achieved with less restrictive constraints than in conventional SVAR models. The following proposition gives sufficient and necessary conditions for global identification of the shocks when all pairs of $\lambda_{mi}$ are distinct for some $m$.
 
 #### Proposition 1
-Suppose $\Omega_1=WW'$ and $\Omega_m=W\Lambda_mW', \ \ m=2,...,M,$ where $\Lambda_m=\text{diag}(\lambda_{m1},...,\lambda_{md})$, $\lambda_{mi}>0$ ($i=1,...,d$), contains the eigenvalues of $\Omega_m\Omega_1^{-1}$ in the diagonal and the columns of the nonsingular $W$ are the related eigenvectors. Then, the last $d_1$ structural shocks are uniquely identified^[We say that the $j$th structural shock is uniquely identified the $j$th column of the B-matri is unique for given mixing weights $\alpha_{1,t},...,\alpha_{M,t}$. This requires that the $j$th column of $W$ and $\Lambda_m$, $m=2,..,M$, are unique. Identification of all the shocks is thus equivalent to uniqueness of the employed decomposition of $\Omega_1,...,\Omega_M$. Note that the economic shock to which the $j$th structural shock relates to does not depend on any particular ordering of the structural shocks but instead on the specific constraints that only the shock of interest satisfies.] if 
+Suppose $\Omega_1=WW'$ and $\Omega_m=W\Lambda_mW', \ \ m=2,...,M,$ where $\Lambda_m=\text{diag}(\lambda_{m1},...,\lambda_{md})$, $\lambda_{mi}>0$ ($i=1,...,d$), contains the eigenvalues of $\Omega_m\Omega_1^{-1}$ in the diagonal and the columns of the nonsingular $W$ are the related eigenvectors. Then, the last $d_1$ structural shocks are uniquely identified^[We say that the $j$th structural shock is uniquely identified the $j$th column of the B-matrix is unique for given mixing weights $\alpha_{1,t},...,\alpha_{M,t}$. This requires that the $j$th columns of $W$ and $\Lambda_m$, $m=2,..,M$, are unique. Identification of all the shocks is thus equivalent to uniqueness of the employed decomposition of $\Omega_1,...,\Omega_M$. Note that the economic shock to which the $j$th structural shock relates to does not depend on any particular ordering of the structural shocks but instead on the specific constraints that only the shock of interest satisfies.] if 
 
-1. for all $j\geq d_1$ and $i\neq j$ there exists an $m\in \lbrace 2,...,M \rbrace$ such that $\lambda_{mi} \neq \lambda_{mj}$,
+1. for all $j > d-d_1$ and $i\neq j$ there exists an $m\in \lbrace 2,...,M \rbrace$ such that $\lambda_{mi} \neq \lambda_{mj}$,
 
-2. the columns of $W$ are constrained in a way that for all $i\neq j\geq d_1$ changing the order of the $i$th and $j$th column would violate the constraints as is and after changing all signs in the $i$th column, and
+2. the columns of $W$ are constrained in a way that for all $i\neq j> d- d_1$ changing the order of the $i$th and $j$th column would violate the constraints as is and after changing all signs in the $i$th column, and
 
 3. there is at least one (strict) sign constraint in each of the last $d_1$ columns of $W$.
 
@@ -285,11 +290,11 @@ and so on, where $"*"$ signifies that the element is not constrained, $"+"$ deno
 Shocks that don't satisfy the condition (1) of Proposition 1 can still be identified but it requires stronger conditions. The following proposition provides sufficient criteria for global identification of the last $d_1$ shocks when exactly one of the eigenvalues $\lambda_{mi}$ with $i\neq j > d - d_1$ is identical to $\lambda_{mj}$ in all $m$. For simplicity, we assume that only another one the shocks with identical eigenvalues is to be identified.
 
 #### Proposition 2
-Let $d_1<d$. Consider the matrix decomposition of Proposition 1 and further suppose that for $j=d-d_1+1$ and some $i\leq d-d_1$ we have $\lambda_{mi}=\lambda_{mj}$ for all $m$, but for all $l\centernot\in\lbrace i,j \rbrace$, $\lambda_{ml}\neq\lambda_{mj}$ for some $m$. Then, the last $d_1$ structural shocks are uniquely identified if conditions (1)-(3) of Proposition 1 are otherwise satisfied, and in addition
+Let $d_1<d$. Consider the matrix decomposition of Proposition 1 and further suppose that for $j=d-d_1+1$ and some $i\leq d-d_1$ we have $\lambda_{mi}=\lambda_{mj}$ for all $m$, but for all $l$ that are not in $\lbrace i,j \rbrace$, $\lambda_{ml}\neq\lambda_{mj}$ for some $m$. Then, the last $d_1$ structural shocks are uniquely identified if conditions (1)-(3) of Proposition 1 are otherwise satisfied, and in addition
 
 4. the column $i\leq d-d_1$ of $W$ such that $\lambda_{mi}=\lambda_{mj}$ for all $m$ has at least one (strict) sign constraint and the $j$th column has a zero constraint where the $i$th column has the (strict) sign constraint. 
 
-\noindent Note that the assumption $j=d-d_1+1$ is made without loss of generality as the structural shocks can always be reordered accordingly by also reordering the columns of $W$ (including the constraints) and the eigenvalues $\lambda_{mi}$ correspondingly.^[While the assumptions in Propositions 1 and \ref{prop:ident2} regarding the ordering of the shocks are not restrictive, they can also be relaxed to allow for any ordering and are made here for simplicity only.]
+\noindent Note that the assumption $j=d-d_1+1$ is made without loss of generality as the structural shocks can always be reordered accordingly by also reordering the columns of $W$ (including the constraints) and the eigenvalues $\lambda_{mi}$ correspondingly.^[While the assumptions in Propositions 1 and 2 regarding the ordering of the shocks are not restrictive, they can also be relaxed to allow for any ordering and are made here for simplicity only.]
 
 To exemplify, if $d=4$, $\lambda_{m1}\neq\lambda_{m4}$ for some $m$, $\lambda_{m2}\neq\lambda_{m4}$ for some $m$, and $\lambda_{m3}=\lambda_{m4}$ for all $m$, the following constraints lead to global identification of last shock:
 $$
@@ -321,10 +326,10 @@ If more than two eigenvalues are identical for all $m=2,...,M$ but they are not 
 ## Estimation of the structural GMVAR model
 The SGMVAR model is estimated similarly to the reduced form version, expect that the model is parametrized with $W$ and $\lambda_{mi}$, $m=2,...,M$, $i=1,...,d$ instead of the covariance matrices $\Omega_{m}$, $m=1,...,M$. The estimation is can be done with the function `fitGMVAR` but now the argument `structural_pars` needs to be supplied with a list providing the constraints on $W$ (which equally imposes the constraints on the B-matrix) and optionally linear constraints on the $\lambda_{mi}$ parameters. 
 
-The list `structural_pars` should contain at least the element `W` which is a $(dxd)$ matrix matrix with its entries imposing constraints on W: NA indicating that the element is unconstrained, a positive value indicating strict positive sign constraint, a negative value indicating strict negative sign constraint, and zero indicating that the element is constrained to zero. The optional element named `C_lambda` which is a $(d(M-1) \times r)$ constraint matrix that satisfies ($\lambda_{2},...,\lambda_{M}) =C_{\lambda} \gamma$ where $\lambda_{m}=(\lambda_{m1},...,\lambda_{md})$ and $\gamma$ is the new $(r x 1)$ parameter subject to which the model is estimated (similarly to AR parameter constraints). The entries of `C_lambda` must be either __positive__ or __zero__. Ignore (or set to `NULL`) if the eigenvalues $\lambda_{mi}$ should not be constrained. Note that other constraints than constraining some of the $\lambda_{mi}$ to be identical are not recommended but is such constraints are imposed, the argument `lambda_scale` in the genetic algorithm (see `?GAfit`) should be adjusted accordingly.
+The list `structural_pars` should contain at least the element `W` which is a $(dxd)$ matrix matrix with its entries imposing constraints on W: NA indicating that the element is unconstrained, a positive value indicating strict positive sign constraint, a negative value indicating strict negative sign constraint, and zero indicating that the element is constrained to zero. The optional element named `C_lambda` which is a $(d(M-1) \times r)$ constraint matrix that satisfies ($\lambda_{2},...,\lambda_{M}) =C_{\lambda} \gamma$ where $\lambda_{m}=(\lambda_{m1},...,\lambda_{md})$ and $\gamma$ is the new $(r x 1)$ parameter subject to which the model is estimated (similarly to AR parameter constraints). The entries of `C_lambda` must be either __positive__ or __zero__. Ignore (or set to `NULL`) if the eigenvalues $\lambda_{mi}$ should not be constrained. Note that other constraints than constraining some of the $\lambda_{mi}$ to be identical are not recommended but if such constraints are imposed, the argument `lambda_scale` in the genetic algorithm (see `?GAfit`) should be adjusted accordingly.
 
 ## Building structural model based on a reduced form model
-If the number of regimes is two ($M=2$), a structural model can be build based on a reduced form model because the matrix decomposition used in the simulatenous diagonalization of the error term covariance matrices always exists. This can be done with function `gmvar_to_sgmvar` which should be supplied with the reduced form model and it returns a corresponding structural model. After creating the structural model, the columns of $W$ can be reordered ex-post with the function `reorder_W_columns` which also reorders all $\lambda_{mi}$ accordingly and hence the resulting model will conincide with the original reduced form model. Also, all signs any column of $W$ can be swapped ex-post with the function `swap_W_signs`.
+If the number of regimes is two ($M=2$), a structural model can be build based on a reduced form model because the matrix decomposition used in the simultaneous diagonalization of the error term covariance matrices always exists. This can be done with function `gmvar_to_sgmvar` which should be supplied with the reduced form model and it returns a corresponding structural model. After creating the structural model, the columns of $W$ can be reordered ex-post with the function `reorder_W_columns` which also reorders all $\lambda_{mi}$ accordingly and hence the resulting model will conincide with the original reduced form model. Also, all signs any column of $W$ can be swapped ex-post with the function `swap_W_signs`.
 
 ## Impulse response analysis
 Following Koop et al. (1996) and Kilian & Lütkepohl (2017), we consider the generalized impulse response function (GIRF) defined as
@@ -335,15 +340,15 @@ where $n$ is the chosen horizon, $\mathcal{F}_{t-1}=\sigma\lbrace y_{t-j},j>0\rb
 
 Due to the $p$-step Markov property of the SGMVAR model, conditioning on (the $\sigma$-algebra generated by) the $p$ previous observations $\boldsymbol{y}_{t-1}\equiv(y_{t-1},...,y_{t-p})$ is effectively the same as conditioning on $\mathcal{F}_{t-1}$ at the time $t$ and later. The history $\boldsymbol{y}_{t-1}$ can be either fixed or random, but with random history the GIRF becomes a random vector, however. Using fixed $\boldsymbol{y}_{t-1}$ makes sense when one is interested in the effects of the shock in a particular point of time, whereas more general results are obtained by assuming that $\boldsymbol{y}_{t-1}$ follows the stationary distribution of the process. If one is, on the other hand, concerned about a specific regime, $\boldsymbol{y}_{t-1}$ can be assumed to follow the stationary distribution of the corresponding component model. 
 
-In practice, the GIRF and its distributional properties can be approximated with a Monte Carlo algorithm that generates independent realizations of the process and then takes the sample mean for point estimate. If $\boldsymbol{y}_{t-1}$ is random and follows the distribution $G$, the GIRF should be estimated for different values of $\boldsymbol{y}_{t-1}$ generated from $G$, and then the sample mean and sample quantiles can be taken to obtain the point estimate and confidence intervals. The algorithm implemented in `gmvarkit` is presented in Virolainen (2020).
+In practice, the GIRF and its distributional properties can be approximated with a Monte Carlo algorithm that generates independent realizations of the process and then takes the sample mean for point estimate. If $\boldsymbol{y}_{t-1}$ is random and follows the distribution $G$, the GIRF should be estimated for different values of $\boldsymbol{y}_{t-1}$ generated from $G$, and then the sample mean and sample quantiles can be taken to obtain the point estimate and confidence intervals. The algorithm implemented in `gmvarkit` is presented in an Appendix of Virolainen (2020).
 
 Because the SGMVAR model allows to associate specific features or economic interpretations for different regimes, it might be interesting to also examine the effects of a structural shock to the mixing weights $\alpha_{m,t}$, $m=1,...,M$. We then consider the related GIRFs $E[\alpha_{m,t+n}|\delta_j,\boldsymbol{y}_{t-1}] - E[\alpha_{m,t+n}|\boldsymbol{y}_{t-1}]$ for which point estimates and confidence intervals can be constructed similarly to (\ref{eq:girf}).
 
 In `gmvarkit`, the GIRF can be estimated with the function `GIRF` which should be supplied with the estimated SGMVAR model or a SGMVAR model build with hand specified parameter values using the function `GMVAR`. The size of the structural shock can be set with the argument `shock_size`. If not specified, the size of one standard deviation is used; that is, the size one. Among other arguments, the function may also be supplied with the argument `init_regimes` which specifies from which regimes' stationary distributions the initial values are generated from. If more than one regime is specified, a mixture distribution with weights given by the mixing weight parameters is used. Alternatively, one may specify fixed initial values with the argument `init_values`. Note that the confidence intervals (whose confidence level can be specified with the argument `ci`) reflect uncertainty about the initial value only and not about the parameter estimates. 
 
-Because estimating the GIRF and confidence intervals for it is computationally demanding, parallel computing is taken use of to shorten the estimation time. The number of CPU cores used can be set with the argument `ncores`. Finally, observe that the objects returned by the GIRF function have their own plot and print methods.
+Because estimating the GIRF and confidence intervals for it is computationally demanding, parallel computing is taken use of to shorten the estimation time. The number of CPU cores used can be set with the argument `ncores`. 
 
-
+As final remarks, note that the objects returned by the GIRF function have their own plot and print methods. Also, cumulative impulse responses of the specified variables can be obtained directly by specifying the argument `which_cumulative` in the function `GIRF`.
 
 ## References
 * Lanne, M. and Lütkepohl, H. (2010). Structural vector autoregressions with nonnormal residuals. _Journal of Business & Economic Statistics_, 28(1):159–168.
